fix h1s wrapping

--- a/MyLSB/wwwroot/scss/_typography.scss
+++ b/MyLSB/wwwroot/scss/_typography.scss
@@ -19,7 +19,7 @@ h1,
     line-height: 1.429;
 
     @include media-breakpoint-up(lg) {
-        font-size: 5.5rem;
+        font-size: 4.8rem;
         line-height: 1.273;
     }
 }
